<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">task_03</string>
    <string name="todo">TODO</string>
    <string name="login">LOGIN</string>
    <string name="welcome">WELCOME</string>
    <string name="email_id">EMail ID</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_user">ALREADY USER</string>
    <string name="_password_">Password</string>
    <string name="_email_id_">EMail ID</string>
    <string name="_3">3</string>
    <string name="library_fine_calculator">LIBRARY FINE CALCULATOR</string>
    <string name="enter_the_fine_peeriod_in_days">ENTER THE FINE PEERIOD (IN DAYS)</string>
    <string name="show">SHOW</string>
    <string name="logout">LOGOUT</string>
    <string name="calculator">CALCULATOR</string>
    <string name="voice_recorder">VOICE RECORDER</string>
    <string name="to_do_list">TO DO LIST</string>
    <string name="academics">ACADEMICS</string>
    <string name="time_table">TIME TABLE</string>
    <string name="library_fine_calculater">LIBRARY FINE CALCULATER</string>
    <string name="chemistry">CHEMISTRY</string>
    <string name="programming_and_problem_solving">PROGRAMMING AND PROBLEM SOLVING</string>
    <string name="engineering_drawing">ENGINEERING DRAWING</string>
    <string name="mathematics">MATHEMATICS</string>
    <string name="period_6">Period 6</string>
    <string name="period_1">Period 1</string>
    <string name="period_2">Period 2</string>
    <string name="period_3">Period 3</string>
    <string name="period_4">Period 4</string>
    <string name="period_5">Period 5</string>
    <string name="edit">EDIT</string>
</resources>
