<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95DDFD"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="402dp"
        android:layout_height="143dp"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#1E0101"
        android:textColorLink="#170101"
        android:textSize="90sp"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.153" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="333dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.085" />

    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:background="#F10505"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0E0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/button3"
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:background="#F10505"
        android:gravity="center"
        android:text="@string/already_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0E0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>